# seraph

./: .gitignore  README.md  dune-project  run_bench.sh
_build/: .db  .digest-db  log
_build/default/: seraph.dune-package  seraph.install
_build/default/.dune/cc_vendor/: header_check.h
_build/default/lib/core/: neon_types.ml  neon_types.mli  seraph.cma  seraph.cmxa  seraph.cmxs  seraph.ml-gen
_build/default/lib/core/.merlin-conf/: lib-seraph
_build/default/lib/core/.seraph.objs/: seraph__Neon_types.impl.d  seraph__Neon_types.intf.d  seraph__Neon_vload.impl.all-deps  seraph__Neon_vload.impl.d  seraph__Neon_vload.intf.d
_build/default/lib/core/.seraph.objs/byte/: seraph.cmi  seraph.cmo  seraph.cmt  seraph__Neon_types.cmi  seraph__Neon_types.cmo  seraph__Neon_types.cmt  seraph__Neon_types.cmti  seraph__Neon_vload.cmi  seraph__Neon_vload.cmo  seraph__Neon_vload.cmt  seraph__Neon_vload.cmti
_build/default/lib/core/.seraph.objs/native/: seraph.cmx  seraph__Neon_types.cmx  seraph__Neon_vload.cmx
_build/default/lib/core/tests/: test_neon_types.ml
_build/default/lib/core/tests/.merlin-conf/: exe-test_neon_types  exe-test_neon_vload
_build/default/lib/core/tests/.test_neon_types.eobjs/: dune__exe.ml-gen  dune__exe__Test_neon_types.impl.d  dune__exe__Test_neon_types.intf.d
_build/default/lib/core/tests/.test_neon_types.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  (+2 more)
_build/default/lib/core/tests/.test_neon_vload.eobjs/: dune__exe__Test_neon_vload.impl.d  dune__exe__Test_neon_vload.intf.d
_build/install/default/lib/seraph/: META  dune-package  opam
hyperfine_results/: dot_n256.md  dot_n4000000.md  dot_n65536.json  saxpy_n256.json  saxpy_n256.md  saxpy_n4000000.json  saxpy_n4000000.md  saxpy_n65536.md  sum_reduce_n256.json  sum_reduce_n4000000.json  sum_reduce_n4000000.md
lib/: dune
lib/core/: dune  neon_stubs.c  neon_varith.ml  neon_varith.mli  neon_vload.ml  neon_vload.mli
lib/core/tests/: dune  test_neon_vload.ml
lib/ffi/: bindings.ml  bindings.mli  handler_stubs.c  shim.c
lib/kernels/: dot.S  dot_optim.S  saxpy.S  saxpy_optim.s  single_query_attn.S  softmax.S  sum_red.S  sum_reduction.S  sum_reduction_optim.S
lib/scalar/: scalar.ml  scalar.mli
lib/test/: dune  test_dot_prod.ml  test_saxpy.ml  test_softmax.ml  test_sum_reduction.ml
lib/tools/kernels/: dot.c  saxpy.c  softmax.c  sum_reduce.c
results/: combined.md  dot_n256.json  dot_n256.md  dot_n4000000.json  dot_n65536.md  saxpy_n256.json  saxpy_n256.md  saxpy_n4000000.json  saxpy_n4000000.md  saxpy_n65536.json  saxpy_n65536.md  sum_reduce_n256.md  sum_reduce_n65536.json  sum_reduce_n65536.md
(+9 files in other folders)
