(include_subdirs unqualified)

(test
 (name test_saxpy)
 (libraries seraph alcotest unix))

(test
  (name test_dot_prod)
  (libraries seraph alcotest unix))

(test
  (name test_sum_reduction)
  (libraries seraph alcotest unix))

(test
  (name test_softmax)
  (modules test_softmax)
  (libraries seraph alcotest unix))
